<resources>
    <string name="app_name">Crumb</string>
    <string name="channel_present_and_soung_id">presnt and sound id</string>
    <string name="channel_present_and_sound">Present and Sound Alarm</string>
    <string name="channel_present_and_sound_description">Shows notification and plays alarm</string>
    <string name="start_text">First Step</string>
    <string name="alarm_at">Alarm at %1$s</string>
    <string name="no_name_text">No Name</string>
    <string name="name_text">Name</string>
    <string name="description_text">Desciption</string>
    <string name="dismiss_text">Dismiss</string>
    <string name="notes_text">Notes</string>
    <string name="submit_text">Submit</string>
    <string name="cancel_text">Cancel</string>
    <string name="no_recipe_text">No Recipe</string>
    <string name="semicolon">:</string>
    <string name="day">Day</string>
    <string name="hour">Hour</string>
    <string name="min">Min</string>
    <string name="meridian">Am/Pm</string>
    <string name="default_steps_text">X steps in X minutes</string>
    <string name="enter_recipe_name_text">Enter a recipe name</string>
    <string name="confirm_text">Confirm</string>
    <string name="start_time_text">Start Time</string>
    <string name="edit_recipe_button">Button for editing a recipe</string>
    <string name="enter_notes_hint">Enter Notes</string>
    <string name="create_duplicate_button">Button to create a duplicate recipe</string>
    <string name="share_recipe_button">Button to share a text version of recipe</string>
    <string name="edit_text_button">Button to edit text</string>
    <string name="display_recipe_notes_button">Button to display recipe notes</string>
    <string name="input_current_time_button">Button to input current time as start time</string>
    <string name="add_a_note_to_a_step_button">Button to add a note to a step</string>
    <string name="delete_this_recipe"><b>Delete This Recipe?</b></string>
    <string name="delete_this_step"><b>Delete This Step?</b></string>
    <string name="recipe_text"><b>Recipes</b></string>
    <!-- Start Button -->
    <string name="start_button">Start</string>
    <!-- Play Adapter -->
    <string name="completed"><b>Completed!</b></string>
    <string name="alarm_in">Alarm in <b>%1$s</b></string>
</resources>
