<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_border"
    android:padding="10dp">

    <TextView
        android:id="@+id/notes_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notes_text"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/start_guide"
        app:layout_constraintTop_toTopOf="@id/top_guide" />

    <View
        android:id="@+id/top_div"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@drawable/divider_light"
        app:layout_constraintTop_toBottomOf="@+id/notes_header"
        tools:layout_editor_absoluteX="10dp" />

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/dismiss_button"
        app:layout_constraintTop_toBottomOf="@id/top_div">

        <androidx.emoji.widget.EmojiEditText
            android:id="@+id/input_text_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/enter_notes_hint"
            android:textIsSelectable="true" />

    </ScrollView>

    <Button
        android:id="@+id/dismiss_button"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/dimsiss_button_selector"
        android:text="@string/dismiss_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/confirm_button"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/confirm_button_selector"
        android:text="@string/submit_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/top_guide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".025" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/start_guide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".025" />
</androidx.constraintlayout.widget.ConstraintLayout>
