<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:maxHeight="500dp"
    android:layout_margin="5dp"
    android:padding="10dp">

    <androidx.emoji.widget.EmojiEditText
        android:id="@+id/step_name_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:ellipsize="end"
        android:hint="@string/name_text"
        android:singleLine="true"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/step_scroll_view"
        tools:layout_editor_absoluteX="56dp" />

    <ScrollView
        android:id="@+id/step_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_below="@id/step_name_field"
        app:layout_constraintTop_toBottomOf="@+id/step_name_field"
        app:layout_constraintBottom_toTopOf="@id/view_b"
        tools:layout_editor_absoluteX="4dp">

        <androidx.emoji.widget.EmojiEditText
            android:id="@+id/step_notes_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/notes_text"
            android:textColor="@color/default_dark"
            android:textSize="14sp" />
    </ScrollView>

    <View
        android:id="@+id/view_b"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_below="@id/step_scroll_view"
        android:layout_marginTop="20dp"
        android:background="@drawable/divider"
        app:layout_constraintBottom_toTopOf="@id/time_from_start"
        app:layout_constraintTop_toBottomOf="@+id/step_scroll_view" />

    <TextView
        android:id="@+id/time_from_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/view_b"
        android:textSize="14sp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/view_c"
        app:layout_constraintTop_toBottomOf="@+id/view_b" />

    <View
        android:id="@+id/view_c"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/time_from_start"
        android:background="@color/hilight"
        app:layout_constraintBottom_toTopOf="@id/time_from_last"
        app:layout_constraintTop_toBottomOf="@+id/time_from_start" />

    <TextView
        android:id="@+id/time_from_last"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/view_c"
        android:textSize="14sp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/view_d"
        app:layout_constraintTop_toBottomOf="@+id/view_c" />

    <View
        android:id="@+id/view_d"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/time_from_last"
        android:background="@color/hilight"
        app:layout_constraintBottom_toTopOf="@id/percentage_of_total"
        app:layout_constraintTop_toBottomOf="@+id/time_from_last" />

    <TextView
        android:id="@+id/percentage_of_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/view_d"
        android:textSize="14sp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/dismiss_button"
        app:layout_constraintTop_toBottomOf="@+id/view_d" />

    <Button
        android:id="@+id/dismiss_button"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center"
        android:background="@drawable/dimsiss_button_selector"
        android:text="@string/dismiss_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
    <Button
        android:id="@+id/confirm_button"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center"
        android:background="@drawable/confirm_button_selector"
        android:text="@string/submit_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>

